<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ExploreScreens.SenderExploreScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:text="@string/transmission_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/no_msgs_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header1"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no_msgs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/number_of_messages"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/no_msgs_edit"
                android:layout_marginLeft="5dp"
                android:hint="messages"
                android:text="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/time_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_msgs_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="Time between messages"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/time_edit"
                android:layout_marginLeft="5dp"
                android:hint="in seconds"
                android:text="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/msg_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/message_length"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/msg_length_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/message_lower_case"
                android:text="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/seed_card"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/seed"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/seed_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/payload_initialization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/increment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seed_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/auto_incr_switch"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:switchPadding="50dp"
                android:textColor="@color/gray"
                android:checked="true"
                android:text="Auto increment"
                android:textOff="Auto increment off"
                android:textOn="Auto increment on"
                android:textSize="22dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increment_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:text="Environment Settings"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/descr_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header2"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/description"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/descr_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dist_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descr_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dist_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/target_distance"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/dist_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/in_meters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height_sender_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dist_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/h_sender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/height_of_sender"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/h_sender_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/in_meters"
                android:text="2.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height_rec_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_sender_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/h_rec_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/height_of_receiver"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/h_rec_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/in_meters"
                android:text="1.7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/environment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_rec_card"
        app:cardBackgroundColor="@color/white">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/env_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:text="@string/environment_header"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/env_edit"
                android:layout_marginLeft="5dp"
                android:hint="@string/environment"
                android:text="city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>