<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ExploreScreens.ReceiverExploreScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.ExploreScreens.SenderExploreScreen">

            <include
                android:id="@+id/config_layout"
                layout="@layout/config_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/change_config_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="changeConfig"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="change configuration"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/config_layout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/rcv_msg_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/change_config_button">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/msg_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/received_message"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/rssi_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/default_rssi_display"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/snr_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/default_snr_display"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/time_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/timing_default_string"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/location_card"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcv_msg_card">

                <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    tools:context=".screens.ExploreScreens.SenderExploreScreen">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/latitude"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/longitude"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/altitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/altitude"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/default_dist_string"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/tag_location"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimary"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="tagLocation"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_card"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>